deploy/kubernetes/admin_frontend_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adminfrontend
  namespace: buttercup-store
  labels:
    app: buttercup-store
    tier: frontend
spec:
  #type: LoadBalancer
  type: ClusterIP
  ports:
    # the port that this service should serve on
  - protocol: TCP
    port: 3000
    targetPort: 3000
  selector:
    name: adminfrontend


#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: productdb
#  namespace: buttercup-store
#  labels:
#    app: buttercup-store
#    tier: db
#spec:
#  type: LoadBalancer
#  selector:
#    name:productdb
#    tier: db
#  ports:
#    - name: mysql
#      port: 3306
#      targetPort: 3306
