deploy/kubernetes/product_db_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: productdb
  labels:
    name: productdb
  namespace: buttercup-store
spec:
  ports:
    # the port that this service should serve on
  - port: 3306
    targetPort: 3306
  selector:
    name: productdb






#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: productdb 
#  namespace: buttercup-store
#  labels:
#    app: buttercup-store
#    tier: db
#spec:
#  type: LoadBalancer
#  selector:
#    name:productdb 
#    tier: db
#  ports:
#    - name: mysql
#      port: 3306
#      targetPort: 3306
