deploy/kubernetes/product_microservice_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: productservice
  namespace: buttercup-store
  labels:
    app: buttercup-store
    tier: middleware
spec:
  #type: LoadBalancer
  type: ClusterIP
  ports:
    # the port that this service should serve on
  - protocol: TCP
    port: 6767
    targetPort: 6767
  selector:
    name: productservice

#---
#apiVersion: v1
#kind: Service
#metadata:
#  name:  productservice 
#  namespace: buttercup-store
#  labels:
#    app: buttercup-store
#    tier: middleware
#spec:
#  type: LoadBalancer
#  selector:
#    name: productservice
#  ports:
#    - name: productservice
#      port: 6767
#      targetPort: 6767
